--- a/templates/artCard/_form.html.twig
+++ b/templates/artCard/_form.html.twig
@@ -49,8 +49,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-6">{{ include('components/_map.html.twig') }}</div>
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 d-flex justify-content-center">{{ include('components/_map.html.twig') }}</div>
+        <div class="col-12 col-lg-6 d-flex justify-content-center">
             <div class="mt-md-4">
                 {{ form_start(form) }}
                 <div class="form-outline form-white mb-4">
@@ -70,9 +70,6 @@
                 </div>
                 <div hidden>
                     {{ form_row(form.longitude) }}
-                </div>
-                <div>
-                    {{ include('components/_map.html.twig') }}
                 </div>
                 {{ form_row(form._token) }}
                 <button type="submit" class="btn btn-outline-light btn-lg px-5"
