add style on form

--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -141,3 +141,14 @@ form label {
   width: 35rem;
 }
 
+/* ---------- FORM NEW ARTCARD  ---------- */
+
+.form-artCard-container{
+  height: 35rem;
+}
+
+.form-artCard-container form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
