--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,9 +29,9 @@
             <div class="row mt-5">
                 {% for art in arrayArt %}
                     <div class="col-12 col-lg-3 my-5 d-flex flex-column align-items-center">
+                        <a href="{{ path('artCard_show', {id: art.id}) }}">
                         <img class="img-fluid picture-more-art" src="{{ art.pictureArt }}">
-                        <a class="text-decoration-none text-white fs-1"
-                           href="{{ path('artCard_show', {id: art.id}) }}">{{ art.title }}</a>
+                        </a>
                     </div>
                 {% endfor %}
             </div>
