full text of description

--- a/templates/artCard/show.html.twig
+++ b/templates/artCard/show.html.twig
@@ -15,7 +15,7 @@
             <div class="col-12 col-lg-6 d-flex justify-content-center">
                 <div class="art-homepage">
                     <img class="picture-homepage img-fluid mb-3" src="{{ artCard.pictureArt }}">
-                    <p class="description-homepage">{{ artCard.description[:200] ~ (artCard.description|length > 200 ? '...') }}</p>
+                    <p class="description-homepage">{{ artCard.description}}</p>
                 </div>
             </div>
             <div class="col-12 col-lg-6 d-flex justify-content-center">
