add uploader profil picture

--- a/templates/artist/index.html.twig
+++ b/templates/artist/index.html.twig
@@ -9,7 +9,7 @@
             {% for artist in artists %}
                 <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
                     <img class="card-img img-fluid img-thumbnail bg-black"
-                         src="{{ artist.urlProfilPicture }}" alt="This is the profil picture of an artist"/>
+                         src="{{ artist.profilPicture }}" alt="This is the profil picture of an artist"/>
                     <div class="mt-1 card-body">
                         <h1 class="card-title m-0 text-center text-dark">{{ artist.nickName }}</h1>
                         <div class="d-flex justify-content-around">
