--- a/templates/admin/adminArtistType.html.twig
+++ b/templates/admin/adminArtistType.html.twig
@@ -22,11 +22,12 @@
                                 {{ form_row(form.password) }}
                             </div>
                             <div class="form-outline form-white mb-4">
-                                {{ form_row(form.urlProfilPicture) }}
+                                {{ form_row(form.profilPicture) }}
                             </div>
                             <div class="form-outline form-white mb-4">
                                 {{ form_row(form.description) }}
                             </div>
+                            {{ form_row(form._token) }}
                             <button type="submit" class="btn btn-outline-light btn-lg px-5"
                                     value="Valider">
                                 Créer
