rework artist profil page

--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -104,6 +104,7 @@ form label {
 /* ---------- ARTIST CARD ---------- */
 
 .artist-card {
+  cursor: pointer;
   margin: 1.5rem;
   width: 20rem;
 }
@@ -117,6 +118,35 @@ form label {
   object-fit: contain;
   object-position: 50% 50%;
   height: 15rem;
+}
+
+.artist-card:hover {
+  scale: 1.05;
+  transition-duration: 1s;
+}
+
+.rotate-minus-15 {
+  transform: rotate(-15deg);
+}
+
+.rotate-minus-10 {
+  transform: rotate(-10deg);
+}
+
+.rotate-minus-5 {
+  transform: rotate(-5deg);
+}
+
+.rotate-5 {
+  transform: rotate(5deg);
+}
+
+.rotate-10 {
+  transform: rotate(10deg);
+}
+
+.rotate-15 {
+  transform: rotate(15deg);
 }
 
 /* ---------- FORM LOGIN ---------- */
@@ -149,7 +179,7 @@ form label {
 
 /* ---------- FORM NEW ARTCARD  ---------- */
 
-.form-artCard-container{
+.form-artCard-container {
   height: 35rem;
 }
 
