--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="{{ path('artist_showAll') }}">Gestion artistes</a>
                             </li>
                         {% endif %}
-                        {% if is_granted('ROLE_USER') or is_granted('ROLE_ARTIST') or is_granted('ROLE_ADMIN') %}
+                        {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
                             <h4 class="text-center pt-3">Mon compte</h4>
                             <li class="nav-item text-center pt-3">
                                 <a class="nav-link" aria-current="page" href="{{ path('user_show') }}">Mon profil</a>
@@ -42,6 +42,12 @@
                             <li class="nav-item text-center border-bottom pb-3">
                                 <a class="nav-link" href="#">Mes pings</a>
                             </li>
+                        {% endif %}
+                        {% if is_granted('ROLE_ARTIST') %}
+                        <h4 class="text-center pt-3">Mon compte</h4>
+                        <li class="nav-item text-center pt-3">
+                            <a class="nav-link" aria-current="page" href="{{ path('artist_profil') }}">Mon profil</a>
+                        </li>
                         {% endif %}
                     {% endif %}
                     <li class="nav-item text-center pt-3">
