--- a/templates/artist/profil.html.twig
+++ b/templates/artist/profil.html.twig
@@ -10,20 +10,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-lg-6 d-flex justify-content-center">
+            <div class="col-sm-12 col-lg-6 d-flex justify-content-center">
                 <div class="art-homepage">
                     <img class="picture-homepage img-fluid mb-3" src="{{ artist.profilPicture }}"
                          alt="This is a profil picture">
                 </div>
             </div>
-            <div class="col-12 col-lg-6">
-                <p class="description-homepage">{{ artist.description }}</p>
+            <div class="col-sm-12 col-lg-6">
+                <p class="description-homepage fs-4">{{ artist.description }}</p>
             </div>
-        </div>
-        <div class="row justify-content-end">
-            {% if is_granted('ROLE_ARTIST') %}
-                <button class="btn btn-success col-sm-12 col-md-1 mx-2">Modifier le profil</button>
-            {% endif %}
         </div>
     </div>
 {% endblock %}
