--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,7 +15,7 @@
             <div class="col-12 col-lg-6 d-flex justify-content-center">
                 <div class="art-homepage">
                     <img class="picture-homepage img-fluid mb-3" src="{{ frontArt.pictureArt }}">
-                    <p class="description-homepage">{{ frontArt.description[:195] ~ (frontArt.description|length > 200 ? '...') }}
+                    <p class="description-homepage mb-sm-5 mb-lg-0">{{ frontArt.description[:195] ~ (frontArt.description|length > 200 ? '...') }}
                         {% if frontArt.description|length > 200 %}
                         <a class="text-decoration-none text-danger pointer-event" href="{{ path('artCard_show', {id: frontArt.id}) }}">plus</a></p>
                     {% endif %}
