--- a/templates/artCard/index.html.twig
+++ b/templates/artCard/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des artCards{% endblock %}
+{% block title %}Liste des oeuvres{% endblock %}
 
 {% block body %}
 
