--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-12 text-center mb-3">
                 <h1>" {{ frontArt.title }} "</h1>
-                <h2 class="fst-italic fs-4">{{ frontArt.user.nickname }}</h2>
+                <h2 class="fst-italic">{{ frontArt.user.nickname }}</h2>
             </div>
         </div>
         <div class="row">
