--- a/templates/artCard/index.html.twig
+++ b/templates/artCard/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des artCards{% endblock %}
+{% block title %}Liste des oeuvres{% endblock %}
 
 {% block body %}
 
@@ -12,7 +12,7 @@
                     <img class="card-img img-fluid img-thumbnail bg-black"
                          src="{{ artCard.pictureArt }}" alt="This is a picture of an art"/>
                     <div class="mt-1 card-body">
-                        <h1 class="card-title m-0 text-center">{{ artCard.title }}</h1>
+                        <h1 class="card-title m-0 text-center text-dark">{{ artCard.title }}</h1>
                         <div class="d-flex justify-content-around">
                             {% if is_granted('ROLE_ADMIN') %}
                                 <a href="{{ path('artCard_edit', {'id': artCard.id}) }}"
