rework home page and scroll button

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,8 +52,8 @@
                 </div>
             </div>
         </div>
-        <button class="scroll-btn" aria-label="Défiler vers le bas">
-            <i class="fas fa-chevron-down"></i>
+        <button class="scroll-btn">
+            <i class="fas fa-arrow-down"></i>
         </button>
     </div>
 {% endblock %}
