--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -126,16 +126,13 @@ form label {
   right: 20px;
   width: 50px;
   height: 50px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #fff;
   border: none;
   border-radius: 50%;
-  color: #fff;
   font-size: 24px;
   cursor: pointer;
   display: block;
 }
-
-
 
 .scroll-btn i {
   margin-top: 2px;
