add some propriety

--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -75,11 +75,12 @@ form label {
 
 /* ---------- HOME PAGE ---------- */
 
-.page-wrapper {
+.home-wrapper {
   height: 200vh;
+  position: relative;
 }
 
-.section {
+.home-section {
   height: 100vh;
 }
 
