--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    <div class="page-wrapper">
-        <div class="section section-1">
+    <div class="home-wrapper">
+        <div class="home-section top-section">
             <input type="hidden" value="{{ frontArt.id }}" id="getHomeArtId">
             <div class="container-fluid">
                 <div class="row">
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <div class="section section-2">
+        <div class="home-section bottom-section">
             <div class="container-fluid">
                 <div class="col-12 mt-lg-5">
                     <h2 class="text-center h1">
