all text dark and pp user

--- a/templates/artCard/pending.html.twig
+++ b/templates/artCard/pending.html.twig
@@ -11,7 +11,7 @@
                     <img class="card-img img-fluid img-thumbnail bg-black"
                          src="{{ artCard.pictureArt }}" alt="This is the profil picture of an art"/>
                     <div class="mt-1 card-body">
-                        <h1 class="card-title m-0 text-center">{{ artCard.title }}</h1>
+                        <h1 class="card-title m-0 text-center text-dark">{{ artCard.title }}</h1>
                         <div class="d-flex justify-content-around">
                                 <a href="{{ path('artCard_pending_show', {'id': artCard.id}) }}"
                                    class="btn btn-success text-white">Voir Plus</a>
