--- a/templates/artCard/showPending.html.twig
+++ b/templates/artCard/showPending.html.twig
@@ -15,7 +15,7 @@
                         </div>
                         <div class="col-sm-7 d-flex">
                             <div class="card-block d-flex flex-column justify-content-between align-content-between">
-                                <h1 class="show-card-title card-title text-center">{{ artCard.title }}</h1>
+                                <h1 class="show-card-title card-title text-center text-dark">{{ artCard.title }}</h1>
                                 <p class="show-card-description">{{ artCard.description }}</p>
                                 <div class="d-flex justify-content-between">
                                     <p class="show-card-city">{{ artCard.city }}</p>
