--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -12,7 +12,7 @@
                     <img class="card-img img-fluid img-thumbnail bg-black"
                          src="https://via.placeholder.com/300" alt="This is a place holder"/>
                     <div class="mt-1 card-body">
-                        <h1 class="card-title m-0 text-center">{{ user.nickName }}</h1>
+                        <h1 class="card-title m-0 text-center text-dark">{{ user.nickName }}</h1>
                         <div class="d-flex justify-content-around">
                             <a href="{{ path('admin_edit_user', {'id': user.id}) }}"
                                class="btn btn-success text-white">Edit</a>
