--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -8,10 +8,10 @@
         <div class="row justify-content-center">
             <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
                 <img class="card-img img-fluid img-thumbnail bg-black"
-                     src="https://via.placeholder.com/300" alt="This is a place holder"/>
+                     src="{{ asset('build/images/users/userPP.png') }}" alt="This is a place holder"/>
                 <div class="mt-1 card-body">
-                    <h1 class="card-title m-0 text-center">{{ user.nickName }}</h1>
-                    <p class="fs-4 text-center">{{ user.email }}</p>
+                    <h1 class="card-title m-0 text-center text-dark">{{ user.nickName }}</h1>
+                    <p class="fs-4 text-center text-dark">{{ user.email }}</p>
                     <div class="d-flex justify-content-around">
                         <a href="{{ path('user_edit') }}"
                            class="btn btn-success text-white">Edit</a>
