add correct link for redirect user on home page

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -4,7 +4,7 @@
                 aria-controls="offcanvasNavbarDark">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Local ' <span class="text-danger">Art</span></a>
+        <a class="navbar-brand" href="{{ path('home_index') }}">Local ' <span class="text-danger">Art</span></a>
         <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasNavbarDark"
              aria-labelledby="offcanvasNavbarDarkLabel">
             <div class="offcanvas-header">
